--- a/_data/zh/strings.yml
+++ b/_data/zh/strings.yml
@@ -1,5 +1,5 @@
 home:
-  contact_me: "通过一下方式联系我："
+  contact_me: "通过以下方式联系我："
   blog_title: "文章：最近"
   see_more_posts: "查看更多文章 ->"
   projects_title: "最近项目"
