--- a/_data/zh/strings.yml
+++ b/_data/zh/strings.yml
@@ -6,7 +6,7 @@ home:
   see_more_projects: "查看更多项目 ->"
 footer:
   title: " "
-  description: "我的其他平台"
+  description: " "
   pages: 页面
 blog:
   read_more: "更多 ->"
