--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ contact_channels:
   # mastodon: "https://lile.cl/"
   # threads: "https://www.threads.net/@example"
   # linkedin: "https://www.linkedin.com/in/example/"
+  artstation: "https://www.artstation.com/eryingzhang9279"
 
 ##
 # Plugins configuration
