--- a/_data/zh/strings.yml
+++ b/_data/zh/strings.yml
@@ -5,8 +5,8 @@ home:
   projects_title: "最近项目"
   see_more_projects: "查看更多项目 ->"
 footer:
-  title: " "
-  description: " "
+  title: "仰高钻坚，日进一卒"
+  description: "如果发现内容有误，或者想提供一些建议和意见，欢迎通过以下方式联系我进行指正。"
   pages: 页面
 blog:
   read_more: "更多 ->"
