--- a/_data/zh/strings.yml
+++ b/_data/zh/strings.yml
@@ -6,7 +6,7 @@ home:
   see_more_projects: "查看更多项目 ->"
 footer:
   title: "仰高钻坚，日进一卒"
-  description: "如果发现内容有误，或者想提供一些建议和意见，欢迎通过以下方式联系我进行指正。"
+  description: "如果发现内容有误，或者想提供一些建议和意见，请联系我。"
   pages: 页面
 blog:
   read_more: "更多 ->"
